# slamnote

./: .gitignore  README.md  mathjax_cmdeditor.md  test.md  第一讲-预备知识.md  第一讲.md  第七讲-视觉里程计1.md  第三讲-三维空间的刚体运动.md  第三讲:三维空间的刚体运动.md  第九讲-前端设计.md  第二讲-初识SLAM.md  第二讲.md  第五讲-相机与图像.md  第五讲:相机与图像.md  第八讲-视觉里程计2.md  第六讲-非线性优化.md  第四讲-李群和李代数.md  第四讲:李群和李代数.md
code/第三讲/: eigenMatrix.cpp
code/第二讲/: CMakeLists.txt  libHelloSLAM.cpp  libHelloSLAM.h  useHello.cpp
code/第六章/使用ceres拟合曲线/: CMakeLists.txt  ceresLine.cpp
code/第四讲/: useSophus.cpp
